Attempt to fix the x-overflow

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -5,7 +5,6 @@ html {
 
 body {
   overflow-x: hidden;
-  min-height: 100vh;
 }
 
 #main-footer {
@@ -17,6 +16,7 @@ body {
   bottom: 0;
   width: 100%;
   font-size: 0.8rem;
+  overflow-x: hidden;
 }
 
 /* Control the font for all text-elements */
